fix: compilation issue with Java 8